--- a/app/index.html
+++ b/app/index.html
@@ -102,15 +102,15 @@
 		</div>
 		
 		<div class="classes-slider">
-			<img src="../img/@2x/Layer 7.png" alt="image">
-			<img src="../img/@2x/Layer 8.png" alt="image">
-			<img src="../img/@2x/Layer 9.png" alt="image">
-			<img src="../img/@2x/Layer 7.png" alt="image">
-			<img src="../img/@2x/Layer 8.png" alt="image">
-			<img src="../img/@2x/Layer 9.png" alt="image">
-			<img src="../img/@2x/Layer 7.png" alt="image">
-			<img src="../img/@2x/Layer 8.png" alt="image">
-			<img src="../img/@2x/Layer 9.png" alt="image">
+			<img src="img/@2x/Layer 7.png" alt="image">
+			<img src="img/@2x/Layer 8.png" alt="image">
+			<img src="img/@2x/Layer 9.png" alt="image">
+			<img src="img/@2x/Layer 7.png" alt="image">
+			<img src="img/@2x/Layer 8.png" alt="image">
+			<img src="img/@2x/Layer 9.png" alt="image">
+			<img src="img/@2x/Layer 7.png" alt="image">
+			<img src="img/@2x/Layer 8.png" alt="image">
+			<img src="img/@2x/Layer 9.png" alt="image">
 		</div>
 
 		<div class="button button__classes">
