--- a/app/index.html
+++ b/app/index.html
@@ -6,7 +6,7 @@
 	<meta charset="utf-8">
 
 	<title>AIT Test</title>
-	<meta name="description" content="Startup HTML template OptimizedHTML 5">
+	<meta name="description" content="Made by Hubytskyi">
 
 	<meta name="viewport" content="width=device-width">
 
